added CSS styling

--- a/index.html
+++ b/index.html
@@ -32,51 +32,63 @@
 
     <main>
         <section id="about">
-            <div><h2>About Me</h2></div>
-            <p>This is the actual about me content</p>
+           <h2>About <br> Me</h2>
+            <p> Hello! Welcome to my portfolio, a place where you can find my best coding projects and fun facts about me. 
+                I am a passioante individual who thrives on the simple joys of life. 
+                You will always find me outdoors with my pups, spending quality time with my family and friends, or discovering hidden gems in my city.
+                I am an avid food enthusiast, I'm always up for trying new cuisines and discovering new recipes. 
+                <br>Let's connect and share our pssions for technology! </p>
         </section>
-        <section>
-            <h2 id="work">Work</h2>
+
+        <section id="work-container">
+            <h2>Work</h2>
             <div class="work-buttons">
                 <a href="https://sur-report-example.com">
-                    <img src="Assets/Images/surf-report-img.jpg" alt="sky with sun shining through some clouds">
-                    <div>
-                        <h2>Surf Report</h2>
+                    <img src="Assets/Images/surf-report-img.jpg" alt="sky with sun shining through some clouds" id="top-img">
+                    <div class="work-title">
+                        <h3 id="surf-report">Surf Report</h3>
                     </div>
                 </a>
-        
+            </div>    
+            <div class="work-buttons">
                 <a href="https://sur-report-example.com">
-                    <img src="Assets/Images/led-wall-img.jpg" alt="hand pointing at an accent blue wall">
-                    <div>
-                        <h2>Led Wall</h2>
+                    <img src="Assets/Images/led-wall-img.jpg" alt="hand pointing at an accent blue wall" class="block-img1">
+                    <div class="work-title">
+                        <h3 id="led-wall">Led Wall</h3>
                     </div>
                 </a>
+            </div>
+            <div class="work-buttons">    
                 <a href="https://sur-report-example.com">
-                    <img src="Assets/Images/calculator-img.jpg" alt="computer showing HTML code">
-                    <div>
-                        <h2>Calculator</h2>
+                    <img src="Assets/Images/calculator-img.jpg" alt="computer showing HTML code" class="block-img2">
+                    <div class="work-title">
+                        <h3 id="calculator">Calculator</h3>
                     </div>
                  </a>
+            </div>
+            <div class="work-buttons">     
                 <a href="https://sur-report-example.com">
-                    <img src="Assets/Images/pastel-puzzles-img.jpg" alt="Puzzle made of pastel pieces">
-                    <div>
-                        <h2>Pastel Puzzles</h2>
+                    <img src="Assets/Images/pastel-puzzles-img.jpg" alt="Puzzle made of pastel pieces" class="block-img3">
+                    <div class="work-title">
+                        <h3 id="pastel-puzzles">Pastel Puzzles</h3>
                     </div>
                 </a>
+            </div>
+            <div class="work-buttons">
                 <a href="https://sur-report-example.com">
-                    <img src="Assets/Images/running-buddy-img.jpg" alt="Person's legs getting ready to run in a track">
-                    <div>
-                        <h2>Running Buddy</h2>
+                    <img src="Assets/Images/running-buddy-img.jpg" alt="Person's legs getting ready to run in a track" class="block-img4">
+                    <div class="work-title">
+                        <h3 id="running-buddy">Running Buddy</h3>
                     </div>
                 </a>
             </div>
         </section>
-        <section id="contant">
-            <h2>Contact</h2>
+        <section id="contact">
+            <h2>Contact <br/> Me</h2>
             <ul>
-                <li>Phone: <a href="tel: +19562529683">+1 (956) 252 9683</a></li>
-                <li>Email: <a href="mailto:test@gmail.com">test@gmail.com</a></li>
-                <li>Github: <a href="https://github.com/">Github</a></li>
+                <li>Phone: <a href="tel: +19562529683" class="contact-info">+1 (956) 252 9683</a></li>
+                <li>Email: <a href="mailto:test@gmail.com" class="contact-info">cinthyavqza@gmail.com</a></li>
+                <li>Github: <a href="https://github.com/" class="contact-info">Github</a></li>
             </ul>
         </section>
     </main>
