Updated portfolio layout and styling

--- a/index.html
+++ b/index.html
@@ -10,87 +10,90 @@
     <header class="header"> 
         <h1>Cinthya Vazquez</h1>
         <nav> 
-            <div>
-                <a href="#about">About Me</a>
-            </div>
-            <div>
-                <a href="#work">Work</a>
-            </div>
-            <div>
-                <a href="#contact">Contact Me</a>
-            </div>
-            <div>
-                <a href="#resume">Resume</a>
-            </div>
+            <a href="#about">About Me</a>
+            <a href="#work">Work</a>
+            <a href="#skills">Skills</a>
+            <a href="#contact">Contact</a>
+            <a href="#resume">Resume</a>
         </nav>
     </header>
 
     <section class="subheading">
-        <img src="Assets/Images/h2-img.jpg">
+        <img src="Assets/Images/h2-img.jpg" alt="Portfolio banner">
         <div class="subheading-position">Portfolio</div>
     </section>   
 
     <main>
         <section id="about">
-           <h2>About <br> Me</h2>
-            <p> Hello! Welcome to my portfolio, a place where you can find my best coding projects and fun facts about me. 
-                I am a passioante individual who thrives on the simple joys of life. 
-                You will always find me outdoors with my pups, spending quality time with my family and friends, or discovering hidden gems in my city.
-                I am an avid food enthusiast, I'm always up for trying new cuisines and discovering new recipes. 
-                <br>Let's connect and share our pssions for technology! </p>
+            <h2>About Me</h2>
+            <p>
+                I'm a bilingual data-driven problem solver with a background in psychology and web development.
+                My interests lie at the intersection of tech, human behavior, and data visualization. I'm always up for a challenge, whether it's building dashboards, analyzing trends, or creating clean, accessible design.
+            </p>
         </section>
 
-        <section id="work-container">
+        <section id="work">
             <h2>Work</h2>
-            <div class="work-buttons">
-                <a href="https://sur-report-example.com">
-                    <img src="Assets/Images/surf-report-img.jpg" alt="sky with sun shining through some clouds" id="top-img">
-                    <div class="work-title">
-                        <h3 id="surf-report">Surf Report</h3>
-                    </div>
-                </a>
-            </div>    
-            <div class="work-buttons">
-                <a href="https://sur-report-example.com">
-                    <img src="Assets/Images/led-wall-img.jpg" alt="hand pointing at an accent blue wall" class="block-img1">
-                    <div class="work-title">
-                        <h3 id="led-wall">Led Wall</h3>
-                    </div>
-                </a>
-            </div>
-            <div class="work-buttons">    
-                <a href="https://sur-report-example.com">
-                    <img src="Assets/Images/calculator-img.jpg" alt="computer showing HTML code" class="block-img2">
-                    <div class="work-title">
-                        <h3 id="calculator">Calculator</h3>
-                    </div>
-                 </a>
-            </div>
-            <div class="work-buttons">     
-                <a href="https://sur-report-example.com">
-                    <img src="Assets/Images/pastel-puzzles-img.jpg" alt="Puzzle made of pastel pieces" class="block-img3">
-                    <div class="work-title">
-                        <h3 id="pastel-puzzles">Pastel Puzzles</h3>
-                    </div>
-                </a>
-            </div>
-            <div class="work-buttons">
-                <a href="https://sur-report-example.com">
-                    <img src="Assets/Images/running-buddy-img.jpg" alt="Person's legs getting ready to run in a track" class="block-img4">
-                    <div class="work-title">
-                        <h3 id="running-buddy">Running Buddy</h3>
-                    </div>
-                </a>
+            <div class="projects-grid">
+                <div class="project">
+                    <h3>Behavior Tracker Dashboard</h3>
+                    <p>A mock dashboard visualizing client progress using HTML, CSS, and JS.</p>
+                    <a href="https://github.com/cinvqz/project-link" target="_blank">View Project</a>
+                </div>
+                <div class="project">
+                    <h3>Surf Report</h3>
+                    <p>Weather dashboard displaying surf and climate data using JavaScript.</p>
+                    <a href="https://sur-report-example.com" target="_blank">View Project</a>
+                </div>
+                <div class="project">
+                    <h3>LED Wall</h3>
+                    <p>Dynamic interface simulating LED visual patterns with user input.</p>
+                    <a href="#" target="_blank">View Project</a>
+                </div>
+                <div class="project">
+                    <h3>Calculator</h3>
+                    <p>Functional web-based calculator built with HTML, CSS, and JS.</p>
+                    <a href="#" target="_blank">View Project</a>
+                </div>
+                <div class="project">
+                    <h3>Pastel Puzzles</h3>
+                    <p>Creative puzzle layout experiment using CSS grid and animations.</p>
+                    <a href="#" target="_blank">View Project</a>
+                </div>
+                <div class="project">
+                    <h3>Running Buddy</h3>
+                    <p>App concept for tracking fitness goals and running stats.</p>
+                    <a href="#" target="_blank">View Project</a>
+                </div>
             </div>
         </section>
-        <section id="contact">
-            <h2>Contact <br/> Me</h2>
+
+        <section id="skills">
+            <h2>Skills</h2>
             <ul>
-                <li>Phone: <a href="tel: +19562529683" class="contact-info">+1 (956) 252 9683</a></li>
-                <li>Email: <a href="mailto:test@gmail.com" class="contact-info">cinthyavqza@gmail.com</a></li>
-                <li>Github: <a href="https://github.com/" class="contact-info">Github</a></li>
+                <li>JavaScript</li>
+                <li>SQL</li>
+                <li>Canva</li>
+                <li>HTML/CSS</li>
+                <li>Data Visualization</li>
+                <li>Git/GitHub</li>
+                <li>Dashboard Design</li>
+            </ul>
+        </section>
+
+        <section id="contact">
+            <h2>Contact Me</h2>
+            <ul>
+                <li>Phone: <a href="tel:+19562529683">+1 (956) 252 9683</a></li>
+                <li>Email: <a href="mailto:cinthyavqza@gmail.com">cinthyavqza@gmail.com</a></li>
+                <li>GitHub: <a href="https://github.com/cinvqz" target="_blank">github.com/cinvqz</a></li>
+                <li>LinkedIn: <a href="https://www.linkedin.com/in/cinthyavqz" target="_blank">linkedin.com/in/cinthyavqz</a></li>
             </ul>
         </section>
     </main>
+
+    <footer>
+        <p>&copy; 2024 Cinthya Vazquez</p>
+    </footer>
 </body>
 </html>
