added working links

--- a/index.html
+++ b/index.html
@@ -36,34 +36,39 @@
             <h2>Work</h2>
             <div class="projects-grid">
                 <div class="project">
-                    <h3>Behavior Tracker Dashboard</h3>
-                    <p>A mock dashboard visualizing client progress using HTML, CSS, and JS.</p>
-                    <a href="https://github.com/cinvqz/project-link" target="_blank">View Project</a>
+                    <h3>The Daily Tech</h3>
+                    <p>A full-stack CMS-style blog platform using Handlebars.js, Sequelize, and MVC architecture.</p>
+                    <a href="https://the-daily-tech.onrender.com/" target="_blank">Live Site</a>
+                    <a href="https://github.com/cinvqz/the-daily-tech" target="_blank">GitHub Repo</a>
                 </div>
                 <div class="project">
-                    <h3>Surf Report</h3>
-                    <p>Weather dashboard displaying surf and climate data using JavaScript.</p>
-                    <a href="https://sur-report-example.com" target="_blank">View Project</a>
+                    <h3>My Weather Genie</h3>
+                    <p>A responsive weather dashboard using OpenWeather API and JavaScript for real-time updates.</p>
+                    <a href="https://cinvqz.github.io/my-weather-genie/" target="_blank">Live Site</a>
+                    <a href="https://github.com/cinvqz/my-weather-genie" target="_blank">GitHub Repo</a>
                 </div>
                 <div class="project">
-                    <h3>LED Wall</h3>
-                    <p>Dynamic interface simulating LED visual patterns with user input.</p>
-                    <a href="#" target="_blank">View Project</a>
+                    <h3>Social Network API</h3>
+                    <p>A NoSQL-based back-end app using Express.js and MongoDB for a developer social network.</p>
+                    <a href="https://github.com/cinvqz/social-network-api" target="_blank">GitHub Repo</a>
+                    <a href="https://watch.screencastify.com/v/m1dNl11ww8qBCN4UuyqW" target="_blank">Demo Video</a>
                 </div>
                 <div class="project">
-                    <h3>Calculator</h3>
-                    <p>Functional web-based calculator built with HTML, CSS, and JS.</p>
-                    <a href="#" target="_blank">View Project</a>
+                    <h3>Employee Tracker</h3>
+                    <p>A CLI-based application to manage departments, roles, and employees using MySQL.</p>
+                    <a href="https://github.com/cinvqz/employee-tracker" target="_blank">GitHub Repo</a>
+                    <a href="https://watch.screencastify.com/v/K8C5AESntTWP6ElBFV5i" target="_blank">Demo Video</a>
                 </div>
                 <div class="project">
-                    <h3>Pastel Puzzles</h3>
-                    <p>Creative puzzle layout experiment using CSS grid and animations.</p>
-                    <a href="#" target="_blank">View Project</a>
+                    <h3>Note Taker</h3>
+                    <p>A deployed web application for saving and deleting notes built with Express.js.</p>
+                    <a href="https://note-taker-enbf.onrender.com/" target="_blank">Live Site</a>
+                    <a href="https://github.com/cinvqz/note-taker" target="_blank">GitHub Repo</a>
                 </div>
                 <div class="project">
-                    <h3>Running Buddy</h3>
-                    <p>App concept for tracking fitness goals and running stats.</p>
-                    <a href="#" target="_blank">View Project</a>
+                    <h3>Gym Website (Group Project)</h3>
+                    <p>A collaborative landing page design and development project using HTML/CSS/JS.</p>
+                    <a href="https://github.com/Soulful0/Gym-Website" target="_blank">GitHub Repo</a>
                 </div>
             </div>
         </section>
