--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
                 <div class="project">
                     <h3>The Daily Tech</h3>
                     <p>A full-stack CMS-style blog platform using Handlebars.js, Sequelize, and MVC architecture.</p>
-                    <a href="https://the-daily-tech.onrender.com/" target="_blank">Live Site</a>
                     <a href="https://github.com/cinvqz/the-daily-tech" target="_blank">GitHub Repo</a>
                 </div>
                 <div class="project">
@@ -68,6 +67,7 @@
                 <div class="project">
                     <h3>Gym Website (Group Project)</h3>
                     <p>A collaborative landing page design and development project using HTML/CSS/JS.</p>
+                    <a href="https://soulful0.github.io/Gym-Website/" target="_blank">Live Site</a>
                     <a href="https://github.com/Soulful0/Gym-Website" target="_blank">GitHub Repo</a>
                 </div>
             </div>
