--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <li>Phone: <a href="tel:+19562529683">+1 (956) 252 9683</a></li>
                 <li>Email: <a href="mailto:cinthyavqza@gmail.com">cinthyavqza@gmail.com</a></li>
                 <li>GitHub: <a href="https://github.com/cinvqz" target="_blank">github.com/cinvqz</a></li>
-                <li>LinkedIn: <a href="https://www.linkedin.com/in/cinthyavqz" target="_blank">linkedin.com/in/cinthyavqz</a></li>
+                <li>LinkedIn: <a href="https://www.linkedin.com/in/cinthya-vazquez-42b719181" target="_blank">linkedin.com/in/cinthyavqz</a></li>
             </ul>
         </section>
     </main>
