edited styles, updated resume and bio

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             <a href="#work">Work</a>
             <a href="#skills">Skills</a>
             <a href="#contact">Contact</a>
-            <a href="#resume">Resume</a>
+            <a href="Cinthya-Vazquez-Resume.pdf" target="_blank">Resume</a>
+
         </nav>
     </header>
 
@@ -26,10 +27,7 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <p>
-                I'm a bilingual data-driven problem solver with a background in psychology and web development.
-                My interests lie at the intersection of tech, human behavior, and data visualization. I'm always up for a challenge, whether it's building dashboards, analyzing trends, or creating clean, accessible design.
-            </p>
+            <p aria-hidden="true"></p>
         </section>
 
         <section id="work">
@@ -80,9 +78,7 @@
                 <li>SQL</li>
                 <li>Canva</li>
                 <li>HTML/CSS</li>
-                <li>Data Visualization</li>
                 <li>Git/GitHub</li>
-                <li>Dashboard Design</li>
             </ul>
         </section>
 
@@ -92,7 +88,7 @@
                 <li>Phone: <a href="tel:+19562529683">+1 (956) 252 9683</a></li>
                 <li>Email: <a href="mailto:cinthyavqza@gmail.com">cinthyavqza@gmail.com</a></li>
                 <li>GitHub: <a href="https://github.com/cinvqz" target="_blank">github.com/cinvqz</a></li>
-                <li>LinkedIn: <a href="https://www.linkedin.com/in/cinthya-vazquez-42b719181" target="_blank">linkedin.com/in/cinthyavqz</a></li>
+                <li>LinkedIn: <a href="https://www.linkedin.com/in/cinthya-vazquez-42b719181" target="_blank">Cinthya Vazquez</a></li>
             </ul>
         </section>
     </main>
